--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
+    format("woff2");
+}
+
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
+.spacer {
+  flex: 1 1 auto;
+}
+a {
+  text-decoration: inherit;
+  color: inherit;
+  cursor: pointer;
+}
+.kp {
+  white-space: pre-wrap;
+  word-break: break-all;
+}
+img {
+  object-fit: cover;
+}
+.diaborder {
+  .mat-dialog-container {
+    background: none;
+    border-radius: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+}
