--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,44 +4,41 @@ nav {
   left: 0;
   right: 0;
   z-index: 2;
-  background-color: pink;
+  background-color: white;
   height: 45px;
   padding: 0 8px 0 8px;
   display: flex;
   align-items: center;
   transition: top 0.3s;
 }
-.mat-icon-button {
-  margin-right: 8px;
-}
+
 a {
   height: 41px;
   font-size: 15px;
   padding: 0 10px 0 10px;
   line-height: 41px;
   border-bottom: 2px solid transparent;
-  margin-bottom: -2px;
+  margin: 0 8px -2px 8px;
   transition: border 0.5s linear;
   &:hover {
-    color: rgb(11, 122, 104);
+    color: brown;
   }
 }
 .sidenav {
-  height: 100%;
+  height: calc(100% - 45px);
   width: 280px;
   top: 45px;
   position: fixed;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
   transition: all 0.2s linear;
   overflow-x: hidden;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 .mobile {
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2),
     0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12);
   z-index: 2;
   top: 0;
+  height: 100%;
 }
 .overlay {
   position: fixed;
@@ -73,4 +70,10 @@ a {
 }
 .mat-menu-trigger {
   margin-left: 6px;
+}
+.logo {
+  font-size: 20px;
+  color: mediumvioletred;
+  font-family: "Times New Roman", Times, serif;
+  font-feature-settings: "ss00";
 }
