--- a/src/app/sidenavs/help-sn/help-sn.component.html
+++ b/src/app/sidenavs/help-sn/help-sn.component.html
@@ -6,8 +6,8 @@
         >位于:
         <span style="color:brown">{{
           layout.params?.region || "全部区域"
-        }}</span
-        >, 搜索<span style="color:green">{{
+        }}</span>
+        搜索<span style="color:green">{{
           layout.params?.search || "全部内容"
         }}</span></mat-hint
       >
@@ -29,4 +29,8 @@
       </mat-list-item>
     </cdk-virtual-scroll-viewport>
   </mat-nav-list>
+  <div class="footer">
+    <a href="mailto:809740942@qq.com">联系我们</a>
+    <span>版本: alpha</span>
+  </div>
 </div>
