--- a/src/app/sidenavs/help-sn/help-sn.component.scss
+++ b/src/app/sidenavs/help-sn/help-sn.component.scss
@@ -6,3 +6,14 @@
     margin: 0 16px 0 16px;
   }
 }
+.mat-nav-list {
+  padding-bottom: 8px;
+  border-bottom: 1px gray solid;
+}
+.footer {
+  padding-top: 28px;
+  font-size: 13px;
+  color: gray;
+  display: flex;
+  justify-content: space-around;
+}
