--- a/src/app/sidenavs/help-sn/help-sn.component.html
+++ b/src/app/sidenavs/help-sn/help-sn.component.html
@@ -30,7 +30,7 @@
     </cdk-virtual-scroll-viewport>
   </mat-nav-list>
   <div class="footer">
-    <a href="mailto:809740942@qq.com">联系我们</a>
+    <a (click)="mailto()">联系我们</a>
     <span>版本: alpha</span>
   </div>
 </div>
