--- a/src/app/video/video-home/video-home.component.scss
+++ b/src/app/video/video-home/video-home.component.scss
@@ -1,5 +1,60 @@
-button.mat-fab {
-  position: fixed;
-  right: 35px;
-  bottom: 35px;
+.container {
+  padding: 6px;
+  margin: auto;
+  max-width: 1440px;
+}
+.col {
+  display: grid;
+  gap: 6px;
+}
+.item {
+  transition: box-shadow 0.5s;
+  border-radius: 8px;
+  overflow: hidden;
+  font-size: 12px;
+  &:hover {
+    box-shadow: 0 3px 5px -1px lightskyblue, 0 6px 10px 0 lightskyblue,
+      0 1px 18px 0 lightskyblue;
+  }
+  background-color: rgba(156, 156, 156, 0.1);
+}
+.header {
+  padding: 10px 0 10px 0;
+  font-size: 20px;
+}
+.cont {
+  padding: 6px;
+  text-align: center;
+  > div {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: green;
+  }
+  :first-child {
+    font-size: 15px;
+    color: brown;
+    padding-bottom: 3px;
+  }
+}
+
+img {
+  width: 100%;
+}
+.wrapper {
+  position: relative;
+}
+.status {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 3px;
+  color: white;
+  font-size: 14px;
+  background-image: linear-gradient(to top, rgba(0, 0, 0), rgba(0, 0, 0, 0.1));
+  opacity: 0;
+  transition: 0.5s;
+}
+.item:hover .status {
+  opacity: 1;
 }
