--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,9 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 @font-face {
   font-family: "Material Icons";
   font-style: normal;
